--- a/example.ipynb
+++ b/example.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,11 +88,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "iter   0, ELBO: -1751.73962\n",
+      "iter   1, ELBO: -1590.77063\n",
+      "iter   2, ELBO: -1579.55896\n",
+      "iter   3, ELBO: -1578.55103\n",
+      "iter   4, ELBO: -1578.30579\n",
+      "iter   5, ELBO: -1578.20215\n",
+      "iter   6, ELBO: -1578.14893\n",
+      "iter   7, ELBO: -1578.12830\n",
+      "iter   8, ELBO: -1578.10156\n",
+      "iter   9, ELBO: -1578.05591\n",
+      "iter  10, ELBO: -1577.97839\n",
+      "iter  11, ELBO: -1577.84412\n",
+      "iter  12, ELBO: -1577.63074\n",
+      "iter  13, ELBO: -1577.29712\n",
+      "iter  14, ELBO: -1576.77478\n",
+      "iter  15, ELBO: -1576.05420\n",
+      "iter  16, ELBO: -1575.55151\n",
+      "iter  17, ELBO: -1575.44434\n",
+      "iter  18, ELBO: -1575.41663\n",
+      "iter  19, ELBO: -1575.38794\n",
+      "iter  20, ELBO: -1575.34827\n",
+      "iter  21, ELBO: -1575.30627\n",
+      "iter  22, ELBO: -1575.28784\n",
+      "iter  23, ELBO: -1575.25049\n",
+      "iter  24, ELBO: -1575.20581\n",
+      "iter  25, ELBO: -1575.17957\n",
+      "iter  26, ELBO: -1575.16504\n",
+      "iter  27, ELBO: -1575.15735\n",
+      "iter  28, ELBO: -1575.15710\n"
+     ]
+    }
+   ],
    "source": [
     "paican = PAICAN(A, X, K, verbose=True)\n",
     "z_pr, ca_pr, cx_pr = paican.fit_predict()"
@@ -107,9 +143,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NMI: 80.30\n"
+     ]
+    }
+   ],
    "source": [
     "print('NMI: {:.2f}'.format(nmi(z_pr, z) * 100))"
    ]
